			SWI-Prolog ChangeLog
			====================

VERSION 4.0.8
=============

  * FIXED: Guitracer not closing a stream when tracing decompiled
    (e.g. dynamic) code.

  * PORT/ADDED: Started moving the trouble of compiling and linking
    foreign packages into plld.  It now supports the following to
    generate x.so, x.dll, ... from the given object files.

    	plld -shared -o x object-file ...

  * PORT: Lots of stuff to make SWI-Prolog compile under Cygwin, the
    open source POSIX layer for Windows.  Added README.cygwin for
    details.
			
VERSION 4.0.7
=============

  * FIXED: stream_property/2 to report close_on_abort.  Was documented,
    but not implemented ...

  * ADDED: Informational print message when abort closes a stream.

  * ADDED: close_hook to IOSTREAM to allow setting a foreign hook on the
    closure of any stream  

  * ADDED: library(memfile) to the package clib providing streams to
    memory-buffers.

  * ADDED: library(cgi) from package clib is now standard part of the
    Windows distribution.

  * ADDED: stream_property/2 and set_stream/2 set and query the buffer mode
    of existing streams.  Also added eof_action(Action) and
    close_on_abort(Bool) to set_stream/2.

  * MODIFIED: The sequence X=!, X doesn't cut any longer as this was
    in conflict with the ISO standard (Bart Demoen).

  * FIXED: Memory leak when an exception is thrown from the generator
    of findall/3, bagof/3 or setof/3.  Reported by Bart Demoen.

  * FIXED: Possible infinite loop looking for attached state.  Spotted with
    fix by Nide Naoyuki.   Thanks!

  * PORT: Added various issues to make SWI-Prolog compile on BeOS.  Thanks
    to Axel Doerfler.

  * FIXED: Make plld using -lplmt if prolog is multi-threading.  Reported
    by Sergey Tikhonov.

  * ADDED: Documentation for library(check), library(registry),
    library(netscape) and library(url).

  * ADDED: library(readutil) with some utility predicates to read larger